[gd_scene load_steps=13 format=2]

[ext_resource path="res://Projectile/fire/Flamethrower/light_32x32.png" type="Texture" id=1]
[ext_resource path="res://Sprites/static_floor.png" type="Texture" id=2]
[ext_resource path="res://Enemys/enemy_wall_walker.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 72.5, 36.5 )

[sub_resource type="CanvasItemMaterial" id=16]
blend_mode = 1
light_mode = 1

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0, 0.993151, 1 )
colors = PoolColorArray( 0.423529, 0, 1, 1, 0.612305, 0, 0, 1, 0.392157, 0.392157, 0.392157, 0.235294 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 17 )

[sub_resource type="Curve" id=18]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, 0.372591, 0, 0, Vector2( 1, 1.97853 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 18 )

[sub_resource type="ParticlesMaterial" id=19]
lifetime_randomness = 1.0
flag_rotate_y = true
flag_disable_z = true
direction = Vector3( 500, 500, 0 )
flatness = 1.0
gravity = Vector3( 0, -2000, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 1.0
linear_accel = 100.0
radial_accel_random = 1.0
damping = 100.0
damping_random = 1.0
scale_random = 1.0
scale_curve = SubResource( 13 )
color_ramp = SubResource( 12 )
hue_variation = -0.01
hue_variation_random = 1.0

[sub_resource type="ParticlesMaterial" id=20]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
angular_velocity = 50.0
angular_velocity_random = 1.0
orbit_velocity = 1.5
orbit_velocity_random = 1.0
angle = 5.0
angle_random = 1.0
scale = 1.5
color = Color( 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 73.3125, 3.14583 )

[node name="wall_walker" type="KinematicBody2D" groups=["enemys", "tiles"]]
collision_layer = 8
collision_mask = 768
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -27, -1 )
shape = SubResource( 14 )

[node name="Icon" type="Sprite" parent="."]

[node name="Particles2D" type="Particles2D" parent="Icon"]
modulate = Color( 0.670588, 0.694118, 0.941176, 1 )
material = SubResource( 16 )
position = Vector2( 6.94806e-06, 4.74787e-06 )
rotation = -1.5708
scale = Vector2( 1, 1.5 )
amount = 10
lifetime = 0.3
speed_scale = 0.6
explosiveness = 0.14
randomness = 1.0
process_material = SubResource( 19 )
texture = ExtResource( 1 )

[node name="rocks" type="Particles2D" parent="Icon"]
visible = false
modulate = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
self_modulate = Color( 0, 0, 0, 1 )
amount = 10
preprocess = 5.0
process_material = SubResource( 20 )
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 10, 5 )
texture = ExtResource( 1 )
color = Color( 1, 0, 0, 1 )
energy = 5.0

[node name="Timer" type="Timer" parent="."]

[node name="Collision_node" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Collision_node"]
position = Vector2( 0.5, 0 )
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision_node/Area2D"]
position = Vector2( -26.5, -1.25 )
scale = Vector2( 1, 12 )
shape = SubResource( 21 )

[node name="Area2DLine" type="Area2D" parent="Collision_node"]
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision_node/Area2DLine"]
position = Vector2( -12, 0 )
scale = Vector2( 0.7, 0.1 )
shape = SubResource( 21 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Collision_node/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Collision_node/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Collision_node/Area2DLine" to="." method="_on_Area2DLine_body_entered"]
[connection signal="body_exited" from="Collision_node/Area2DLine" to="." method="_on_Area2DLine_body_exited"]
